--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@ createApp({
   data() {
     return {
       userName: (JSON.parse(localStorage.getItem('cachedPages'))?.userName) || '',
-      userAvatar: (JSON.parse(localStorage.getItem('cachedPages'))?.userAvatar) || 'https://i.pravatar.cc/150?img=0',
+      userAvatar: (JSON.parse(localStorage.getItem('cachedPages'))?.userAvatar) || '2005e27a39fa5f6d97b2e0a95233b2be.jpg',
       newComment: '',
       selectedFile: null,
       selectedImages: [],
