--- a/zap/index.html
+++ b/zap/index.html
@@ -114,7 +114,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-48a4e9af elementor-widget__width-auto elementor-widget elementor-widget-image" data-id="48a4e9af" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.23.0 - 23-07-2024 */
-.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>											<a href="http://localhost/zap">
+.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>											<a href="#">
 							<img decoding="async" src="https://joicy23.github.io/zap-novo-app/imagens/width_512.webp" title="" alt="" loading="lazy" />								</a>
 													</div>
 				</div>
